project/src/components/best-seiling/best-selling.css
.bestselling {
  position: relative;
  width: 100%;
  padding-bottom: 100px;
}

.bestselling::after {
  position: absolute;
  content: "";
  top: -169px;
  right: -201px;
  width: 285px;
  height: 313px;
  background: url("../../../public/img/best-selling-bg.png") no-repeat;
  filter: blur(7px) drop-shadow(-15px 50px 70px rgba(27, 27, 29, 0.1));
}

.bestselling__heading {
  text-align: center;
}

.bestselling__text {
  margin: 0;
  margin-bottom: 178px;
  text-align: center;
}

.bestselling__list {
  counter-reset: rating;
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: grid;
  grid-template-columns: repeat(3, 393px);
  gap: 80px 30px;
}

.bestselling-card {
  padding: 41px 36px 35px 30px;
  background-color: #ffffff;
  border-radius: 24px;
}

.bestselling-card__heading {
  position: relative;
  margin: 0;
  padding: 36px 0 87px 202px;
  font-size: 40px;
  line-height: 44px;
  color: #1b1b1d;
}

.bestselling-card__heading::before {
  position: absolute;
  top: 0;
  counter-increment: rating;
  content: "#"counters(rating,"") " Selling";
  font-size: 20px;
  line-height: 22px;
  color: #64646a;
  font-weight: 400;
}

.bestselling-card__heading::after {
  position: absolute;
  content: "";
  top: -116px;
  left: -10px;
  width: 186px;
  height: 305px;
}

.bestselling-card__heading--espresso::after {
  background: url("../../../public/img/double-espresso.png");
}

.bestselling-card__heading--caramel::after {
  background: url("../../../public/img/caramel-frappe.png");
}

.bestselling-card__heading--iced::after {
  background: url("../../../public/img/iced-coffe.png");
}

.bestselling-card__text {
  margin: 0;
  margin-bottom: 40px;
  font-size: 20px;
  line-height: 28px;
}

.bestselling__price-and-button {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.bestselling__price {
  margin: 0;
  font-size: 30px;
  line-height: 28px;
  color: #1b1b1d;
}

